[tool.poetry]
name = "dbinfo"
version = "0.1.0"
description = "Homework project to print out table from data bases info snatched from API endpoint :)"
authors = ["Andrii Pronkin <pronkin.andrii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32"
pyyaml = "^6.0.1"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^24.4.2"
ruff = "^0.5.5"
